# motile_napari_plugin

./: .pre-commit-config.yaml  LICENSE  README.md  conda_config.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: deploy.yml  docs.yml  test.yml  test_and_deploy.yml
docs/source/: conf.py  editing.rst  getting_started.rst  index.rst  key_bindings.rst  motile.rst  tree_view.rst
scripts/: create_sample_dataset.py  edge_selection.py  hela_example_tracks.csv  prepare_example_data.py  run_darts_tube.py  run_hela.py  test.py  test_edge_selection.py  view_external_tracks.py
scripts/configs/darts/: 210214_salmonella_single_tube.yaml  220510_bsub_degron_rap_single_tube.yaml
src/motile_plugin/: __init__.py  _graph_layer_utils.py  _motile_solver.py  _motile_widget.py  _qwidget_components.py  _utils.py  _widget.py  example_data.py  graph_layer_utils.py  motile_run.py  motile_solver.py  napari.yaml  run.py  runs_list_widget.py  solver_params.py  solver_params_widget.py
src/motile_plugin/_tests/: conftest.py  test_solver.py  test_widget.py
src/motile_plugin/algorithms/motile/backend/: motile_run.py
src/motile_plugin/algorithms/motile/menus/: motile_widget.py  params_editor.py  params_viewer.py  run_editor.py  run_viewer.py  runs_list.py
src/motile_plugin/application_menus/: __init__.py  editing_menu.py  main_app.py  menu_widget.py
src/motile_plugin/backend/: __init__.py  motile_run.py  solve.py  solver_params.py
src/motile_plugin/core/: __init__.py  node_type.py  tracks.py
src/motile_plugin/data_model/: __init__.py  action_history.py  actions.py  solution_tracks.py  tracks.py  tracks_controller.py
src/motile_plugin/data_views/: tracks_viewer.py
src/motile_plugin/data_views/menus/: editing_menu.py  multi_widget.py
src/motile_plugin/data_views/views/: __init__.py
src/motile_plugin/data_views/views/layers/: contour_labels.py  spatial_graph.py  track_graph.py  track_labels.py  track_points.py  tracks_layer_group.py
src/motile_plugin/data_views/views/tree_view/: flip_axes_widget.py  navigation_widget.py  tree_plot.py  tree_view_feature_widget.py  tree_view_mode_widget.py  tree_view_sync_widget.py  tree_widget.py  tree_widget_utils.py
src/motile_plugin/data_views/views/view_3d/: layer_dropdown.py  multiple_view_widget.py
src/motile_plugin/data_views/views_coordinator/: __init__.py  collection_widget.py  collections.py  filter_widget.py  import_external_tracks_dialog.py  node_selection_list.py  tracks_list.py  tracks_viewer.py
src/motile_plugin/import_export/: __init__.py  export_solution_to_csv.py  import_external_tracks_dialog.py  load_tracks.py
src/motile_plugin/layers/: track_graph.py  track_labels.py  track_points.py  tracked_graph.py  tracked_labels.py  tracked_points.py
src/motile_plugin/motile/backend/: motile_run.py  solve.py  solver_params.py
src/motile_plugin/motile/menus/: motile_widget.py  param_values.py  params_editor.py  params_viewer.py  run_editor.py  run_viewer.py  runs_list.py
src/motile_plugin/utils/: colormaps.py  load_tracks.py  node_selection.py  points_utils.py  relabel_segmentation.py  track_data.py  tree_widget_utils.py
src/motile_plugin/widgets/: __init__.py  motile_widget.py  navigation_widget.py  param_values.py  params_editor.py  params_helpers.py  params_viewer.py  plane_slider_widget.py  run_editor.py  run_viewer.py  runs_list.py  solver_params.py  solver_status.py  thickness_slider.py  tracking_view_controller.py  tracks_viewer.py  tree_view_mode_widget.py  tree_widget.py
src/motile_plugin/widgets/motile/: motile_widget.py  param_values.py  params_editor.py  run_editor.py  run_viewer.py
src/motile_plugin/widgets/tracks_view/: navigation_widget.py  tracks_viewer.py  tree_view_feature_widget.py  tree_view_mode_widget.py  tree_widget.py
src/motile_tracker/: __init__.py  example_data.py  napari.yaml
src/motile_tracker/application_menus/: __init__.py  editing_menu.py  main_app.py  menu_widget.py
src/motile_tracker/data_model/: tracks.py  tracks_controller.py
src/motile_tracker/data_views/: __init__.py
src/motile_tracker/data_views/views/layers/: contour_labels.py  track_graph.py  track_labels.py  track_points.py  tracks_layer_group.py
src/motile_tracker/data_views/views/tree_view/: navigation_widget.py  tree_view_feature_widget.py  tree_view_mode_widget.py  tree_widget.py  tree_widget_utils.py
src/motile_tracker/data_views/views/view_3d/: clipping_plane_sliders.py  multiple_view_widget.py  view3D.py
src/motile_tracker/data_views/views_coordinator/: collection_widget.py  filter_widget.py  node_selection_list.py  tracks_list.py  tracks_viewer.py
src/motile_tracker/import_export/: __init__.py  export_solution_to_csv.py  import_external_tracks_dialog.py  load_tracks.py
src/motile_tracker/motile/backend/: __init__.py  motile_run.py  solve.py  solver_params.py
src/motile_tracker/motile/menus/: __init__.py  motile_widget.py  params_editor.py  params_viewer.py  run_editor.py  run_viewer.py
src/motile_tracker/utils/: load_tracks.py  relabel_segmentation.py
tests/: conftest.py  test_solver.py
tests/backend/: test_motile_run.py  test_solver.py
tests/core/: test_tracks.py
tests/data_model/: test_action_history.py  test_actions.py  test_solution_tracks.py  test_tracks.py  test_tracks_controller.py
tests/import_export/: test_export_solution_to_csv.py
tests/motile/backend/: test_motile_run.py  test_solver.py
tests/motile_plugin/utils/: test_tree_widget_utils.py
