[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "motile-plugin"
dynamic = ["version"]
description = "Tracking with motile"
readme = "README.md"
license = { text = "BSD 3-Clause License" }
requires-python = ">=3.10"
authors = [
    { name = "Caroline Malin-Mayor", email = "malinmayorc@janelia.hhmi.org" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies =[
    "napari[all]",
    "numpy",
    "magicgui",
    "qtpy",
    "scikit-image",
    "motile >= 0.3",
    "motile_toolbox >=0.3.4",
    "pydantic",
    "tifffile[all]",
    "fonticon-fontawesome6",
    "pyqtgraph",
    "lxml_html_clean",  # only to deal with napari dependencies being broken
]
[project.optional-dependencies]
testing =["napari", "pyqt5", "pytest", "pytest-cov", "pytest-qt"]
docs = ["myst-parser", "sphinx", "sphinx-autoapi", "sphinx_rtd_theme", "sphinxcontrib-video"]

[project.entry-points."napari.manifest"]
motile-plugin = "motile_plugin:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/funkelab/motile-napari-plugin/issues"
"Documentation" ="https://funkelab.github.io/motile_napari_plugin/"

[tool.setuptools_scm]

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]

ignore = [
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "ISC001", # implicit string concatenation
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["F"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]

[tool.mypy]
ignore_missing_imports = true
