[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "motile-tracker"
dynamic = ["version"]
description = "Application for interactive tracking with global optimization"
readme = "README.md"
license = { text = "BSD 3-Clause License" }
requires-python = ">=3.10"
authors = [
    { name = "Caroline Malin-Mayor", email = "malinmayorc@janelia.hhmi.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies =[
    "napari[all]",
    "numpy",
    "magicgui",
    "qtpy",
    "scikit-image",
    "motile >= 0.3",
    "motile_toolbox == 0.3.5",
    "pydantic",
    "tifffile[all]",
    "fonticon-fontawesome6",
    "pyqtgraph",
    "lxml_html_clean",  # only to deal with napari dependencies being broken
]
[project.optional-dependencies]
testing =["napari", "pyqt5", "pytest", "pytest-cov", "pytest-qt"]
docs = ["myst-parser", "sphinx", "sphinx-autoapi", "sphinx_rtd_theme", "sphinxcontrib-video"]

[project.entry-points."napari.manifest"]
motile-plugin = "motile_plugin:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/funkelab/motile_tracker/issues"
"Documentation" ="https://funkelab.github.io/motile_tracker/"

[tool.setuptools_scm]

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]

ignore = [
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "ISC001", # implicit string concatenation
    "E501", # line too long
]

unfixable = [
  "B905", # currently adds strict=False to zips. Should add strict=True (manually)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["F"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]

[tool.mypy]
ignore_missing_imports = true
