[metadata]
name = motile-plugin
version = attr: motile_plugin.__version__
description = Tracking with motile
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/funkelab/motile-napari-plugin
author = Caroline Malin-Mayor
author_email = malinmayorc@janelia.hhmi.org
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/funkelab/motile-napari-plugin/issues
    Documentation = https://github.com/funkelab/motile-napari-plugin#README.md
    Source Code = https://github.com/funkelab/motile-napari-plugin
    User Support = https://github.com/funkelab/motile-napari-plugin/issues

[options]
packages = find:
install_requires =
    napari[all]
    numpy
    magicgui
    qtpy
    scikit-image
    motile >=0.2.1
    motile_toolbox >=0.2.5
    pydantic
    tifffile[all]
    fonticon-fontawesome6
    pyqtgraph
    lxml_html_clean  # only to deal with napari dependencies being broken

python_requires = >=3.10
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    motile-plugin = motile_plugin:napari.yaml

[options.extras_require]
testing =
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

docs =
    sphinx
    sphinx-autoapi
    sphinx_rtd_theme
    myst-parser

[options.package_data]
* = *.yaml
